Use template file for generating HTML.

--- a/html/flyweight.html
+++ b/html/flyweight.html
@@ -2,22 +2,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+
 <title>Game Programming Patterns / Design Patterns Revisited / Flyweight</title>
 
-        <!-- Tell mobile browsers we're optimized for them and they don't need to crop the viewport. -->
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-        </head>
-        <body id="top">
-        <div class="content">
+<!-- Tell mobile browsers we're optimized for them and they don't need to crop
+     the viewport. -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+<link rel="stylesheet" type="text/css" href="style.css" />
+<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+</head>
+<body id="top">
+<div class="content">
+
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / Design Patterns Revisited</h1>
+
 <h1>Flyweight</h1>
-<p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
-        <p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on August 05, 2011</p>
-        </div>
-        </body>
-        <script src="jquery-1.10.1.min.js"></script>
-        <script src="script.js"></script>
-        </html>
-        
+<p><em>Sorry, this chapter hasn't been written yet!</em></p>
+<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on August 05, 2011</p>
+</div>
+</body>
+<script src="jquery-1.10.1.min.js"></script>
+<script src="script.js"></script>
+</html> <!-- mod_str -->
