--- a/html/state.html
+++ b/html/state.html
@@ -2,16 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+
 <title>Game Programming Patterns / Design Patterns Revisited / State</title>
 
-        <!-- Tell mobile browsers we're optimized for them and they don't need to crop the viewport. -->
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-        </head>
-        <body id="top">
-        <div class="content">
+<!-- Tell mobile browsers we're optimized for them and they don't need to crop
+     the viewport. -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+<link rel="stylesheet" type="text/css" href="style.css" />
+<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+</head>
+<body id="top">
+<div class="content">
+
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / Design Patterns Revisited</h1>
+
 <h1>State</h1>
 <p>Man, have I got a deal for you. This chapter is ostensibly about the State design pattern. But that pattern is really just one way to implement a more abstract pattern called a <em>finite state machine</em> (typically just "FSM"). These in turn have a few close cousin data structures: <em>hierarchical state machines</em> and <em>pushdown automata</em>.</p>
 <p>By the end of the chapter, you should have a handle on all of those. That's a lot to cram in one chapter, though. To keep things as short as possible, the code samples here leave out a few details that you'll have to fill in on your own. I hope they're still clear enough for you to get the big picture.</p>
@@ -620,10 +624,9 @@
 <li>The entity responds to a series of inputs or events over time.</li>
 </ol>
 <p>In games, they are most known for being used in AI, but they are also common in implementations of network protocols, user input handling, navigating menu screens, and parsing text. When you find a problem where a state machine seems like a good fit, the Gang of Four's State pattern is a decent (if verbose) way of implementing it in many object-oriented languages.</p>
-        <p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on July 28, 2013</p>
-        </div>
-        </body>
-        <script src="jquery-1.10.1.min.js"></script>
-        <script src="script.js"></script>
-        </html>
-        
+<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on July 28, 2013</p>
+</div>
+</body>
+<script src="jquery-1.10.1.min.js"></script>
+<script src="script.js"></script>
+</html> <!-- mod_str -->
