--- a/asset/template.html
+++ b/asset/template.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / Behaving Patterns / Context Parameter</title>
+<title>Game Programming Patterns / {0}</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
@@ -14,11 +14,11 @@
 <body id="top">
 <div class="content">
 
-<h1 class="book"><a href="index.html">Game Programming Patterns</a> / Behaving Patterns</h1>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a>{1}</h1>
 
-<h1>Context Parameter</h1>
-<p><em>Sorry, this chapter hasn't been written yet!</em></p>
-<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on August 05, 2011</p>
+<h1>{2}</h1>
+{3}
+<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on {4}</p>
 </div>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
