--- a/html/singleton.html
+++ b/html/singleton.html
@@ -2,16 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+
 <title>Game Programming Patterns / Design Patterns Revisited / Singleton</title>
 
-        <!-- Tell mobile browsers we're optimized for them and they don't need to crop the viewport. -->
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-        </head>
-        <body id="top">
-        <div class="content">
+<!-- Tell mobile browsers we're optimized for them and they don't need to crop
+     the viewport. -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+<link rel="stylesheet" type="text/css" href="style.css" />
+<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+</head>
+<body id="top">
+<div class="content">
+
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / Design Patterns Revisited</h1>
+
 <h1>Singleton</h1>
 <p>This chapter is an anomaly. Every other chapter in this book shows
 you how to use a design pattern. This chapter shows you how <em>not</em> to use
@@ -683,10 +687,9 @@ order of frequency, I tend to use <a class="pattern"
 href="subclass-sandbox.html">Subclass Sandboxes</a>, <a class="pattern"
 href="context-object.html">Context Parameters</a>, and <a
 class="pattern" href="service-locator.html">Service Locators</a>.</p>
-        <p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on July 25, 2013</p>
-        </div>
-        </body>
-        <script src="jquery-1.10.1.min.js"></script>
-        <script src="script.js"></script>
-        </html>
-        
+<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on July 25, 2013</p>
+</div>
+</body>
+<script src="jquery-1.10.1.min.js"></script>
+<script src="script.js"></script>
+</html> <!-- mod_str -->
