--- a/asset/template.html
+++ b/asset/template.html
@@ -3,22 +3,31 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-<title>Game Programming Patterns / {0}</title>
+<title>Game Programming Patterns / {{title}}</title>
 
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop
      the viewport. -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42804721-1', 'gameprogrammingpatterns.com');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body id="top">
 <div class="content">
 
-<h1 class="book"><a href="index.html">Game Programming Patterns</a>{1}</h1>
-
-<h1>{2}</h1>
-{3}
-<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on {4}</p>
+<h1 class="book"><a href="index.html">Game Programming Patterns</a>{{section_header}}</h1>
+<h1>{{header}}</h1>
+{{body}}
+<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on {{mod}}</p>
 </div>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
