--- a/html/context-parameter.html
+++ b/html/context-parameter.html
@@ -10,12 +10,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-42804721-1', 'gameprogrammingpatterns.com');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body id="top">
 <div class="content">
 
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / Behaving Patterns</h1>
-
 <h1>Context Parameter</h1>
 <p><em>Sorry, this chapter hasn't been written yet!</em></p>
 <p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on August 05, 2011</p>
