Allow ASCII " -- " for mdash; and format nicer.
Also, handle "ø".

--- a/html/structure-of-arrays.html
+++ b/html/structure-of-arrays.html
@@ -26,7 +26,7 @@
 
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / Optimizing Patterns</h1>
 <h1>Structure of Arrays</h1>
-<p><em>Sorry, this chapter hasn't been written yet!</em></p>
+<p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
 <p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on August 05, 2011</p>
 </div>
 </body>
