--- a/html/flyweight.html
+++ b/html/flyweight.html
@@ -26,7 +26,7 @@
 
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / Design Patterns Revisited</h1>
 <h1>Flyweight</h1>
-<p><em>Sorry, this chapter hasn't been written yet!</em></p>
+<p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
 <p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on August 05, 2011</p>
 </div>
 </body>
