Call to action box.

--- a/html/index.html
+++ b/html/index.html
@@ -11,27 +11,15 @@
 <body>
 <div class="content">
 <h1>Game Programming Patterns</h1>
-<h2>Hi There</h2>
-<p>Things look a bit sparse, don't they? Well, the truth is you got
-here early. Kind of like that time you showed up for your friend's
-Christmas party and they were still putting up decorations and you had
-to sit on the couch clutching an eggnog while they worked awkwardly
-around you. Like that. Hopefully, not quite that awkward.</p>
-
-<p>It's OK, though. I'm glad you're here. "Here", in case you don't
-know, is the online home for a book I'm working on. It's a collection
-of design patterns I've found in game code.</p>
-
-<p>If you'd like to know when new chapters are online, follow me
-(<a href="https://twitter.com/munificentbob">@munificentbob</a>) on twitter.
-I'll add a quick note there when new content for the book is up.</p>
-
-<p>You can also email me. My name is <tt>robert</tt>, and the domain is
-<tt>stuffwithstuff.com</tt>. I must warn you that I'm terrible at replying to
-email. I have little free time so I try to focus on writing the book, but I do
-read and appreciate every email I receive.</p>
-
-<h2>The Book</h2>
+<div class="in-progress">
+  <span class="dismiss">&times;</span>
+  <p><strong>This book is a work in progress!</strong></p><p>You can help make it great. If you see mistakes, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues/new" target="_blank">file a ticket</a>.</p>
+  <p><a href="http://eepurl.com/C0p89" target="_blank">Join the mailing list</a> or <a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">follow me <img src="images/twitter-16.png" /></a> to stay updated. Thank you!</p>
+  <p class="signature">&mdash; Bob</p>
+</div>
+<p>Welcome to <em>Game Programming Patterns</em>, a book on architectural patterns in game code. If you ever struggle with the complexity of your game's codebase, this book will help. The complete text (that I've written so far) is available online for free, and will always be. Follow the table of contents below to start your journey!</p>
+<p>If you want to get in touch, I am <a href="https://twitter.com/munificentbob">@munificentbob</a> on twitter, or you can email me at <tt>bob</tt> at this site. I must warn you that I'm terrible at replying to email. I have little free time so I try to focus on writing the book, but I do read and appreciate every email I receive.</p>
+<h2>Table of Contents</h2>
 <ul>
   <li>Getting Started
       <ul>
@@ -86,7 +74,7 @@ read and appreciate every email I receive.</p>
       </ul>
   </li>
 </ul>
-<p class="footer">&copy; 2009-2013 Robert Nystrom</p>
+<p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
