--- a/html/type-object.html
+++ b/html/type-object.html
@@ -18,14 +18,18 @@
 
   ga('create', 'UA-42804721-1', 'gameprogrammingpatterns.com');
   ga('send', 'pageview');
-
 </script>
 </head>
 <body id="top">
 <div class="content">
-
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / Behaving Patterns</h1>
 <h1>Type Object</h1>
+<div class="in-progress">
+  <span class="dismiss">&times;</span>
+  <p><strong>This book is a work in progress!</strong></p><p>You can help make it great. If you see mistakes, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues/new" target="_blank">file a ticket</a>.</p>
+  <p><a href="http://eepurl.com/C0p89" target="_blank">Join the mailing list</a> or <a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">follow me <img src="images/twitter-16.png" /></a> to stay updated. Thank you!</p>
+  <p class="signature">&mdash; Bob</p>
+</div>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Allow the flexible creation of new &ldquo;classes&rdquo; by creating
 a single class, each instance of which represents a different type of
@@ -822,9 +826,9 @@ at that as having our Type Object serve double duty as a State
 too.</p>
 </li>
 </ul>
-<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on July 29, 2013</p>
+<p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
 <script src="script.js"></script>
-</html> <!-- mod_str -->
+</html>
