--- a/html/introduction.html
+++ b/html/introduction.html
@@ -18,14 +18,18 @@
 
   ga('create', 'UA-42804721-1', 'gameprogrammingpatterns.com');
   ga('send', 'pageview');
-
 </script>
 </head>
 <body id="top">
 <div class="content">
-
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / Getting Started</h1>
 <h1>Introduction</h1>
+<div class="in-progress">
+  <span class="dismiss">&times;</span>
+  <p><strong>This book is a work in progress!</strong></p><p>You can help make it great. If you see mistakes, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues/new" target="_blank">file a ticket</a>.</p>
+  <p><a href="http://eepurl.com/C0p89" target="_blank">Join the mailing list</a> or <a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">follow me <img src="images/twitter-16.png" /></a> to stay updated. Thank you!</p>
+  <p class="signature">&mdash; Bob</p>
+</div>
 <p>In fifth grade, my friends and I were given access to a little unused
 classroom housing a couple of very beat up TRS-80s. Hoping to inspire
 us, a teacher found a printout of some simple BASIC programs for us
@@ -316,9 +320,9 @@ that process will continue after the ink dries on these pages.</p>
 and refine (or refute!) the patterns in this one, you contribute to
 the software community. If you have suggestions, corrections, or other
 feedback about what&#x2019;s in here, please get in touch.</p>
-<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on July 29, 2013</p>
+<p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
 <script src="script.js"></script>
-</html> <!-- mod_str -->
+</html>
