--- a/html/state.html
+++ b/html/state.html
@@ -18,14 +18,18 @@
 
   ga('create', 'UA-42804721-1', 'gameprogrammingpatterns.com');
   ga('send', 'pageview');
-
 </script>
 </head>
 <body id="top">
 <div class="content">
-
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / Design Patterns Revisited</h1>
 <h1>State</h1>
+<div class="in-progress">
+  <span class="dismiss">&times;</span>
+  <p><strong>This book is a work in progress!</strong></p><p>You can help make it great. If you see mistakes, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues/new" target="_blank">file a ticket</a>.</p>
+  <p><a href="http://eepurl.com/C0p89" target="_blank">Join the mailing list</a> or <a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">follow me <img src="images/twitter-16.png" /></a> to stay updated. Thank you!</p>
+  <p class="signature">&mdash; Bob</p>
+</div>
 <p>Man, have I got a deal for you. This chapter is ostensibly about the State design pattern. But that pattern is really just one way to implement a more abstract pattern called a <em>finite state machine</em> (typically just "FSM"). These in turn have a few close cousin data structures: <em>hierarchical state machines</em> and <em>pushdown automata</em>.</p>
 <p>By the end of the chapter, you should have a handle on all of those. That&#x2019;s a lot to cram in one chapter, though. To keep things as short as possible, the code samples here leave out a few details that you&#x2019;ll have to fill in on your own. I hope they&#x2019;re still clear enough for you to get the big picture.</p>
 <p>State machines occupy a funny corner of computer science. They&#x2019;re not well known to most programmers, but <span name="two-camps">two camps</span> of coders are experienced with them: game AI developers and compiler writers. I think state machines are a good tool for other problems, too, so I&#x2019;ll be using a non-AI example here. First, though, let&#x2019;s see how we might find ourselves wanting one.</p>
@@ -633,9 +637,9 @@
 <li>The entity responds to a series of inputs or events over time.</li>
 </ol>
 <p>In games, they are most known for being used in AI, but they are also common in implementations of network protocols, user input handling, navigating menu screens, and parsing text. When you find a problem where a state machine seems like a good fit, the Gang of Four&#x2019;s State pattern is a decent (if verbose) way of implementing it in many object-oriented languages.</p>
-<p class="footer">&copy; 2009-2013 Robert Nystrom &mdash; Last modified on July 29, 2013</p>
+<p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
 <script src="script.js"></script>
-</html> <!-- mod_str -->
+</html>
