Embed mailing list sign-up form in page.

--- a/html/component.html
+++ b/html/component.html
@@ -26,9 +26,40 @@
 <h1>Component</h1>
 <div class="in-progress">
   <span class="dismiss">&times;</span>
-  <p><strong>This book is a work in progress!</strong></p><p>You can help make it great. If you see mistakes, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues/new" target="_blank">file a ticket</a>.</p>
-  <p><a href="http://eepurl.com/C0p89" target="_blank">Join the mailing list</a> or <a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">follow me <img src="images/twitter-16.png" /></a> to stay updated. Thank you!</p>
-  <p class="signature">&mdash; Bob</p>
+  <p><strong>This book is a work in progress!</strong></p>
+
+  <p>If you see a mistake, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues/new" target="_blank">file a ticket</a>. To know when new chapters are up, join the mailing list:</p>
+
+  <!-- Begin MailChimp Signup Form -->
+  <div id="mc_embed_signup">
+  <form action="http://gameprogrammingpatterns.us7.list-manage.com/subscribe/post?u=0952ca43ed2536d6717766b88&amp;id=0c27329244" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <table>
+      <tr>
+        <td width="100%">
+          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+        </td>
+        <td>
+          <div class="spacer"></div>
+        </td>
+        <td>
+          <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe" class="button">
+        </td>
+      </tr>
+    </table>
+  </form>
+  </div>
+  <!--End mc_embed_signup-->
+
+  <table width="100%">
+    <tr>
+      <td width="50%">
+        <p>Thank you!</p>
+      </td>
+      <td width="50%">
+        <p class="signature">&mdash; Bob (<a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">@munificentbob</a>)</p>
+      </td>
+    </tr>
+  </table>
 </div>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Allow a single class to bridge multiple domains without coupling the
