--- a/html/index.html
+++ b/html/index.html
@@ -11,14 +11,47 @@
 <body>
 <div class="content">
 <h1>Game Programming Patterns</h1>
+
 <div class="in-progress">
   <span class="dismiss">&times;</span>
-  <p><strong>This book is a work in progress!</strong></p><p>You can help make it great. If you see mistakes, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues/new" target="_blank">file a ticket</a>.</p>
-  <p><a href="http://eepurl.com/C0p89" target="_blank">Join the mailing list</a> or <a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">follow me <img src="images/twitter-16.png" /></a> to stay updated. Thank you!</p>
-  <p class="signature">&mdash; Bob</p>
+  <p><strong>This book is a work in progress!</strong></p>
+
+  <p>If you see a mistake, find something unclear, or have a suggestion, please <a href="https://github.com/munificent/game-programming-patterns/issues/new" target="_blank">file a ticket</a>. To know when new chapters are up, join the mailing list:</p>
+
+  <!-- Begin MailChimp Signup Form -->
+  <div id="mc_embed_signup">
+  <form action="http://gameprogrammingpatterns.us7.list-manage.com/subscribe/post?u=0952ca43ed2536d6717766b88&amp;id=0c27329244" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <table>
+      <tr>
+        <td width="100%">
+          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+        </td>
+        <td>
+          <div class="spacer"></div>
+        </td>
+        <td>
+          <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe" class="button">
+        </td>
+      </tr>
+    </table>
+  </form>
+  </div>
+  <!--End mc_embed_signup-->
+
+  <table width="100%">
+    <tr>
+      <td width="50%">
+        <p>Thank you!</p>
+      </td>
+      <td width="50%">
+        <p class="signature">&mdash; Bob (<a href="https://twitter.com/intent/user?screen_name=munificentbob" target="_blank">@munificentbob</a>)</p>
+      </td>
+    </tr>
+  </table>
 </div>
+
 <p>Welcome to <em>Game Programming Patterns</em>, a book on architectural patterns in game code. If you ever struggle with the complexity of your game's codebase, this book will help. The complete text (that I've written so far) is available online for free, and will always be. Follow the table of contents below to start your journey!</p>
-<p>If you want to get in touch, I am <a href="https://twitter.com/munificentbob">@munificentbob</a> on twitter, or you can email me at <tt>bob</tt> at this site. I must warn you that I'm terrible at replying to email. I have little free time so I try to focus on writing the book, but I do read and appreciate every email I receive.</p>
+<p>If you want to get in touch, you can email me at <tt>bob</tt> at this site. I must warn you that I'm terrible at replying to email. I have little free time so I try to focus on writing the book, but I do read and appreciate every email I get.</p>
 <h2>Table of Contents</h2>
 <ul>
   <li>Getting Started
