Link State chapter on index.

--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,7 @@
           <li>Flyweight</li>
           <li>Command</li>
           <li>Observer</li>
-          <li>State</li>
+          <li><a href="state.html">State</a></li>
       </ul>
   </li>
   <li>Game Programming Patterns
