Fix typo in Singleton. #1

--- a/html/singleton.html
+++ b/html/singleton.html
@@ -150,7 +150,7 @@ nice features too:</p>
 <li>
 <p><strong>It doesn&#x2019;t create the instance if no one uses it.</strong> Saving
     memory and CPU cycles is always good. Since the Singleton is
-    initialized only when it&#x2019;s first accessed, if it won&#x2019;t be
+    initialized only when it&#x2019;s first accessed, it won&#x2019;t be
     instantiated at all if the game never asks for it.</p>
 </li>
 <li>
