Start first draft of Update Method.

--- a/html/index.html
+++ b/html/index.html
@@ -76,7 +76,7 @@
           <li>Sequencing Patterns
               <ul>
                   <li><a href="game-loop.html">Game Loop</a></li>
-                  <li>Update Method</li>
+                  <li><a href="update-method.html">Update Method</a></li>
                   <li><a href="double-buffer.html">Double Buffer</a></li>
               </ul>
           </li>
