--- a/html/update-method.html
+++ b/html/update-method.html
@@ -242,15 +242,10 @@
 </pre></div>
 
 
-<p>This simple loop increments the index of the object being updated each iteration. But imagine the object array looks like:</p>
-<div class="codehilite"><pre><span class="mf">0.</span> <span class="n">Foul</span> <span class="n">Beast</span>
-<span class="mf">1.</span> <span class="n">Hero</span>
-<span class="mf">2.</span> <span class="n">Hapless</span> <span class="n">Peasant</span>
-</pre></div>
-
-
-<p>We&#x2019;re updating the hero, so <code>i</code> is 1. He slays the foul beast so it gets removed from the array. The hero shifts up to 0, and the hapless peasant shifts up to index 1. After updating the hero, <code>i</code> is incremented to 2, skipping right over the peasant.</p>
-<p>One option is to just be careful when you remove objects and update any iteration variables to take the removal into account. Another is to <span name="defer">defer</span> removals until you&#x2019;re done walking the list. Mark the object as "dead" but leave it in place. During updating, make sure to skip any dead objects. Then, when that&#x2019;s done, walk the list again to remove the corpses.</p>
+<p>This simple loop increments the index of the object being updated each iteration. The left side of the illustration below shows what the array looks like while we&#x2019;re updating the heroine:</p>
+<p><img src="images/update-method-remove.png"/></p>
+<p>Since we&#x2019;re updating her, <code>i</code> is 1. She slays the foul beast so it gets removed from the array. The heroine shifts up to 0, and the hapless peasant shifts up to 1. After updating the heroine, <code>i</code> is incremented to 2. As you can see on the right, the hapless peasant is skipped over and never gets updated.</p>
+<p>One fix is to just be careful when you remove objects and update any iteration variables to take the removal into account. Another is to <span name="defer">defer</span> removals until you&#x2019;re done walking the list. Mark the object as "dead" but leave it in place. During updating, make sure to skip any dead objects. Then, when that&#x2019;s done, walk the list again to remove the corpses.</p>
 <aside name="defer">
 
 <p>If you have multiple threads processing the items in the update loop, then you are even more likely to defer any modification to it to avoid costly thread synchronization during updates.</p>
@@ -406,6 +401,13 @@
 
 
 <p>Again, most of the change is just moving code out of the game loop and into the class and renaming some stuff. In this case, though, we&#x2019;ve actually made the codebase simpler. In the original nasty imperative code, there were separate local variables for each statue&#x2019;s frame counter and rate of fire.</p>
+<p><span name="uml"></span>
+<img src="images/update-method-uml.png"/></p>
+<aside name="uml">
+
+<p>Do people still care about UML? If so, here&#x2019;s what we just created.</p>
+</aside>
+
 <p>Now that those have been moved into the <code>Statue</code> class itself, you can create as many as you want and each instance will have its own little timer. That&#x2019;s really the motivation behind this pattern: it&#x2019;s now much easier to add new entities to the game world because each one brings along everything it needs to take care of itself.</p>
 <p>This pattern lets us separate <em>populating</em> the game world from <em>implementing</em> it. This in turn gives us the flexibility to populate the world using something like a separate data file or level editor.</p>
 <h2><a href="#design-decisions" name="design-decisions">Design Decisions</a></h2>
