Hand-draw face in Double Buffer.

--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -335,7 +335,7 @@ render something by making a bunch of <code>draw()</code> calls on its buffer:</
 <aside name="draw">
 
 <p>Specifically, it draws this artistic masterpiece:</p>
-<p><img src="images/double-buffer-canvas.gif" /></p>
+<p><img src="images/double-buffer-face.png" width="240" /></p>
 </aside>
 
 <p>Every frame, the game tells the scene to draw. The scene clears the
